# src/main/java/com/krazytop/leagueoflegends/model/MatchFilters.java
@@ -1,0 +1,8 @@
+package com.krazytop.leagueoflegends.model;
+
+public class MatchFilters {
+
+    private String puuid;
+    private String queue;
+    private String role;
+}
